--- a/bg1.html
+++ b/bg1.html
@@ -19,7 +19,7 @@
             <li><span class="font2">Massa ultricies mi</span></li>
         </ul>
         </div>
-        <h3 class="head2">Buy Now</h3>
+        <!-- <h3 class="head2">Buy Now</h3> -->
     </div>
 </body>
 </html>
